renamed names according to typical clojure naming convention